docs(website): added description + image fix

--- a/src/content/docs/docs/getting-started/how-it-works.mdx
+++ b/src/content/docs/docs/getting-started/how-it-works.mdx
@@ -34,7 +34,7 @@ Upon signing up, ISVs are greeted with the default view: the **"Vendor Platform"
 
 The Customer Portal takes a "less is more" approach, offering only the essential features customers need to manage the applications they’ve purchased.
 
-![customer-portal](https://github.com/user-attachments/assets/ccf16563-aaf4-4ac3-a9b6-c64f52be0259)
+![customer-portal](../../../../assets/docs/getting-started/how-it-works/customer-portal.png)
 
 ISVs also have the option to white-label the Customer Portal, aligning it with their corporate [branding](https://glasskube.dev/docs/product/branding/). This creates a impression of an extension of the ISV’s product suite, often leaving end customers unaware that a third-party platform powers the delivery of their on-premises offering.
 
@@ -44,11 +44,11 @@ In addition to the graphical user interfaces, Distr provides programmatic access
 
 ### Distr API
 
-The [Distr API](https://glasskube.dev/products/cloud/docs/integrations/distr-cloud-api/), allows users to bypass the GUI for direct programmatic interaction. The API used in Distr is the same as the Open Source version, ensuring feature parity between the SaaS platform and the API. This guarantees a consistent experience regardless of the access method chosen.
+The [Distr API](/docs/integrations/api/), allows users to bypass the GUI for direct programmatic interaction. The API used in Distr is the same as the Open Source version, ensuring feature parity between the SaaS platform and the API. This guarantees a consistent experience regardless of the access method chosen.
 
 ### Distr SDK
 
-The [Distr SDK](https://glasskube.dev/products/cloud/docs/integrations/distr-cloud-sdk/) enables users and developers to embed Distr’s application management features directly into their own applications or to even write new applications that leverage the SDK. While SDK development runs in parallel with Distr development, there may be occasional gaps in feature parity due to development speed and the impracticality of implementing certain platform-specific features in the SDK. Nevertheless, the SDK provides a powerful way to integrate Distr functionality into your workflows, and we encourage you to explore its capabilities.
+The [Distr SDK](/docs/integrations/sdk/) enables users and developers to embed Distr’s application management features directly into their own applications or to even write new applications that leverage the SDK. While SDK development runs in parallel with Distr development, there may be occasional gaps in feature parity due to development speed and the impracticality of implementing certain platform-specific features in the SDK. Nevertheless, the SDK provides a powerful way to integrate Distr functionality into your workflows, and we encourage you to explore its capabilities.
 
 <Aside type="note" title="Info">
   For more in-depth information on both the Distr API and SDK, head over to the
