--- a/src/content/docs/docs/use-cases/air-gapped.mdx
+++ b/src/content/docs/docs/use-cases/air-gapped.mdx
@@ -5,6 +5,8 @@ sidebar:
   order: 3
 ---
 
+import {Aside} from '@astrojs/starlight/components';
+
 [Air-gapped](https://glasskube.dev/glossary/air-gapped-meaning/) environments are particularly challenging deployment targets for ISVs due to their highly restricted and isolated nature. In these setups, not only are ISVs unable to push updates to the customer’s environment, but the software purchased from the ISV is also unable to operate in a network with internet access. Serving air-gapped customers requires ISVs to navigate a unique set of peculiarities and challenges inherent to these environments.
 
 ## Difficulties of Air-Gapped Environments
@@ -19,6 +21,6 @@ sidebar:
 
 ## How does Distr tackle these challenges?
 
-:::info
+<Aside type="note" title="Info">
 Are you serving Air-gapped customer? If so [get in touch](https://cal.glasskube.com/team/gk/demo?duration=30) and we can walk you through the Air gapped specific features.
-:::
+</Aside>
