docs: clarify docs
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/getting-started/quickstart.mdx
+++ b/src/content/docs/docs/getting-started/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
 title: Quickstart
-description: distr.sh is an open-source software distribution platform?
+description: distr.sh is an Open Source software distribution platform?
 sidebar:
   order: 3
 ---
@@ -133,13 +133,13 @@ Distr users will only see the Onboarding Wizard once, and only if no application
 
 ### Add More Applications
 
-Head over to the `Applications` tab and on the top right corner click on the `+ Add Application` button. And simply follow the steps.
+Head over to the `Applications` tab and in the top right corner click on the `+ Add Application` button. And simply follow the steps.
 
 ![add-application](../../../../assets/docs/getting-started/quickstart/add-app.png)
 
 ### Invite More Customers
 
-Head over to the `Customers` tab and on the top right corner click on the `+ Invite customer` button. And simply follow the steps.
+Head over to the `Customers` tab and in the top right corner click on the `+ Invite customer` button. And simply follow the steps.
 
 ![invite-customer](../../../../assets/docs/getting-started/quickstart/add-customer.png)
 
