feat: add cta buttons
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -5,7 +5,7 @@ sidebar:
   order: 3
 ---
 
-import {Aside} from "@astrojs/starlight/components";
+import {Aside} from '@astrojs/starlight/components';
 
 Alongside the Distr Hub, complete the core of the Distr platform are its lightweight agents, designed to be installed in the customer's environment alongside the ISV’s application. These agents provide the functionality necessary for managing application life cycles in decentralized and customer-controlled environments, without requiring direct access to the deployment target.
 
@@ -13,8 +13,9 @@ Distr offers two pre-built agent types, tailored for different deployment scenar
 
 Beyond lifecycle management, the agents are equipped to collect and provide essential metrics such as application health status and version information. They also aggregate logs, ensuring that troubleshooting can proceed even if a deployment fails and cannot report the error itself.
 
-
 <Aside>
-  We are currently working an agent version that can be integrated into the ISVs Helm chart or Docker Compose file. This will allow for a more seamless deployment experience for the end customer.
-  For more information feel free to reach out.
+  We are currently working an agent version that can be integrated into the ISVs
+  Helm chart or Docker Compose file. This will allow for a more seamless
+  deployment experience for the end customer. For more information feel free to
+  reach out.
 </Aside>
