--- a/src/content/docs/docs/getting-started/deployment-methods.mdx
+++ b/src/content/docs/docs/getting-started/deployment-methods.mdx
@@ -23,7 +23,9 @@ Features:
 - **No platform management responsibilities**.
 
 <Aside type="note" title="Info">
-  Get started by creating your Distr account [here](https://app.distr.sh/register) and then following the onboarding steps here.
+  Get started by creating your Distr account
+  [here](https://app.distr.sh/register) and then following the onboarding steps
+  here.
 </Aside>
 
 ## Self-Hosted Distr
@@ -35,5 +37,7 @@ Features:
 - Ideal for users who **prefer to manage their environment** independently.
 
 <Aside type="note" title="Info">
-  To get started with the self-hosted option, follow our [guide](/docs/self-hosting/getting-started/) to deploy Distr in your environment.
+  To get started with the self-hosted option, follow our
+  [guide](/docs/self-hosting/getting-started/) to deploy Distr in your
+  environment.
 </Aside>
