--- a/src/content/docs/docs/use-cases/air-gapped.mdx
+++ b/src/content/docs/docs/use-cases/air-gapped.mdx
@@ -22,5 +22,7 @@ import {Aside} from '@astrojs/starlight/components';
 ## How does Distr tackle these challenges?
 
 <Aside type="note" title="Info">
-Are you serving Air-gapped customer? If so [get in touch](https://cal.glasskube.com/team/gk/demo?duration=30) and we can walk you through the Air gapped specific features.
+  Are you serving Air-gapped customer? If so [get in
+  touch](https://cal.glasskube.com/team/gk/demo?duration=30) and we can walk you
+  through the Air gapped specific features.
 </Aside>
