chore: rename cta
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/getting-started/deployment-methods.mdx
+++ b/src/content/docs/docs/getting-started/deployment-methods.mdx
@@ -24,7 +24,7 @@ Features:
 
 <Aside type="note" title="Info">
   Get started by creating your Distr account
-  [here](https://app.distr.sh/register) and then following the onboarding steps
+  [here](https://signup.distr.sh) and then following the onboarding steps
   here.
 </Aside>
 
