docs: add Login button
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/index.mdx
+++ b/src/content/docs/docs/index.mdx
@@ -7,7 +7,7 @@ hero:
   image:
     file: ../../../assets/distr.svg
   actions:
-    - text: Getting started
+    - text: What is Distr?
       link: /docs/getting-started/about/
       icon: right-arrow
     - text: View on GitHub
