--- a/src/content/docs/docs/guides/docker-env-var-template.mdx
+++ b/src/content/docs/docs/guides/docker-env-var-template.mdx
@@ -1,16 +1,11 @@
 ---
-title: Using Environment Variable Templates for Docker Applications
-description: Easy Docker Compose Environment Variable management
+title: Configure Docker Environment Variables
+description: With Distr you can define environment variable templates for deploying Docker applications. Tip: With docker compose you can reference variables in multiple services.
 sidebar:
-order: 4
+  order: 4
 ---
 
-
-
-
-
-
-import {Aside, Code, TabItem, Tabs} from "@astrojs/starlight/components";
+import {Aside, Code, TabItem, Tabs} from '@astrojs/starlight/components';
 import dockerComposeBasic from './docker-env-basic/docker-compose.yaml?raw';
 import envBasic from './docker-env-basic/.env?raw';
 import dockerComposeMultiService from './docker-env-multi-service/docker-compose.yaml?raw';
@@ -37,14 +32,16 @@ This setup consists of three parts:
 3. The actual **environment** configured during the deployment of the application.
 
 <Aside type="caution">
-  It is important to note that updating the environment template will not update the environment file for existing deployments.
-  Existing deployments will need to add the new variables manually when they release a new version.
+  It is important to note that updating the environment template will not update
+  the environment file for existing deployments. Existing deployments will need
+  to add the new variables manually when they release a new version.
 </Aside>
 
 Here’s an example of how it works:
 
 <Aside type="tip">
-  Using `:?error` ensures that the template variable must be set, else it will not start
+  Using `:?error` ensures that the template variable must be set, else it will
+  not start
 </Aside>
 
 The docker compose file will be the same for all deployments that use that specific version of the application.
@@ -59,9 +56,7 @@ The environment file can be kustomize for each deployment
   </TabItem>
 </Tabs>
 
-
 You can execute this example with the following command:
-
 
 ```shell
 docker compose up --env .env
@@ -70,8 +65,9 @@ docker compose up --env .env
 # Referencing environment variables in multiple services
 
 <Aside type="caution">
-  As the Distr agent **does not** mount the `.env` file as file into the containers, but provides the variables separately,
-  so you have fine control over which service is able to access which env variable.
+  As the Distr agent **does not** mount the `.env` file as file into the
+  containers, but provides the variables separately, so you have fine control
+  over which service is able to access which env variable.
 </Aside>
 
 You need to pass the environment variables to the services in the `docker-compose.yaml` file.
@@ -97,14 +93,27 @@ When running the docker compose file you will be able to see following output fo
 
 <Tabs>
   <TabItem label="service one">
-    <Code code={oneJson} lang="json" title="http://localhost:3001/env" frame="terminal" />
+    <Code
+      code={oneJson}
+      lang="json"
+      title="http://localhost:3001/env"
+      frame="terminal"
+    />
   </TabItem>
   <TabItem label="service two">
-    <Code code={twoJson} lang="json" title="http://localhost:3002/env" frame="terminal" />
+    <Code
+      code={twoJson}
+      lang="json"
+      title="http://localhost:3002/env"
+      frame="terminal"
+    />
   </TabItem>
   <TabItem label="service three">
-    <Code code={threeJson} lang="json" title="http://localhost:3003/env" frame="terminal" />
+    <Code
+      code={threeJson}
+      lang="json"
+      title="http://localhost:3003/env"
+      frame="terminal"
+    />
   </TabItem>
 </Tabs>
-
-
