chore: add descirption escape
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/guides/docker-env-var-template.mdx
+++ b/src/content/docs/docs/guides/docker-env-var-template.mdx
@@ -1,6 +1,6 @@
 ---
 title: Configure Docker Environment Variables
-description: With Distr you can define environment variable templates for deploying Docker applications. Tip: With docker compose you can reference variables in multiple services.
+description: 'With Distr you can define environment variable templates for deploying Docker applications. Tip: With docker compose you can reference variables in multiple services.'
 sidebar:
   order: 4
 ---
