docs(website): updated description

--- a/src/content/docs/docs/guides/license-mgmt.mdx
+++ b/src/content/docs/docs/guides/license-mgmt.mdx
@@ -1,6 +1,6 @@
 ---
 title: License Management
-description: How to use Licenses to grant or restrict application version to customers
+description: How to use licenses to grant end-customers access to specific application versions
 sidebar:
   order: 5
 ---
