docs(website): updated images and image location

--- a/src/content/docs/docs/guides/license-mgmt.mdx
+++ b/src/content/docs/docs/guides/license-mgmt.mdx
@@ -16,7 +16,7 @@ The license management feature is currently in Beta. To request access, reach ou
 With the licensing feature, you can link a license to a customer, allowing access to specific application versions, whether it’s one, a select few, or all available versions. You can name the license, set an expiration date, and assign it to a particular customer, giving you granular control over which applications and versions each end-customer can use.
 
 ## License flow diagram
-![license-diagram](https://github.com/user-attachments/assets/19c5d1e9-9b7b-4821-b024-49d879d8e73e)
+![license-diagram](../../../../assets/docs/guides/license-diagram.png)
 
 <Aside type="note">
 The diagram above illustrates how a license links an end-customer account to a specific set of application versions. Once the license is active, the customer will only be able to see and can only deploy the granted versions of the application.
@@ -48,13 +48,13 @@ If you don’t see the feature yet, reach out, and we’ll enable it for you. On
 
 The customer can now access and deploy the assigned application version/s directly from their [customer portal](/docs/product/customer-portal/).
 
-![license-form](https://github.com/user-attachments/assets/50ce9476-e318-4e63-9699-5ca415c739c7)
+![license-form](../../../../assets/docs/guides/license-form.png)
 
 ## OCI registry authentication: 
 If your images are stored in a private OCI registry, you'll need to provide access credentials. You can configure these credentials in the lower section of the license configuration panel. Once set, the application versions will be available at the deployment target for as long as the license is valid.
 
-![OCI-registry-auth](https://github.com/user-attachments/assets/a4f48551-6c24-4f67-875b-33a70465577e)
+![OCI-registry-auth](../../../../assets/docs/guides/OCI-Registry-auth.png)
 
 ## Licensing walkthrough video
 
-[![Watch the video](https://github.com/user-attachments/assets/664dbd85-8296-4ab6-af1f-911e75120d77)](https://www.youtube.com/watch?v=qh-ewkWxRj4)
+[![Watch the video](../../../../assets/docs/guides/license-thumbnail.png)](https://www.youtube.com/watch?v=qh-ewkWxRj4)
