--- a/src/content/docs/docs/guides/distr-on-macos.mdx
+++ b/src/content/docs/docs/guides/distr-on-macos.mdx
@@ -6,9 +6,9 @@ sidebar:
 ---
 import {Aside, Code, TabItem, Tabs} from '@astrojs/starlight/components';
 
-Distr is designed to be as versatile as possible. Software vendors need to support end-customers, no matter what their target environment looks like. While most enterprise environments run on Kubernetes clusters or Linux-based VMs, there are always exceptions. What if, for whatever reason, MacOS is the chosen operating system for running Distr agents?
+Distr is designed to be as versatile as possible. That involves being able to run on a variety of operating systems successfully. While most enterprise environments run on Linux-based VMs, there are always exceptions. What if, for testing purposed for instance, MacOS is the chosen operating system for running Distr agents?
 
-If you're using Windows or Linux, the Quickstart guide should cover everything you need. But if you're setting up Distr on MacOS, follow these steps to ensure a smooth deployment experience.
+If you're using Windows or Linux, the [Quickstart guide](/docs/getting-started/quickstart/) should cover everything you need. But if you're setting up Distr on MacOS, follow these steps to ensure a smooth deployment experience.
 
 ## Running Distr agents
 <Aside type="note">
@@ -41,18 +41,18 @@ desktop-linux *   Docker Desktop                            unix:///Users/jakepa
 ```
 
 <Aside type="caution">
-By default, Docker Desktop on Mac may use the `desktop-linux` context instead of `default`. For the Distr agent to locate the correct Docker endpoint, the context must be set to `default`.
+When Docker Desktop runs on macOS, it creates a lightweight Linux VM, and the `desktop-linux` context points to the Docker daemon within this VM. However, Distr expects to connect to the default Docker socket (`/var/run/docker.sock`). This mismatch can cause connectivity issues, especially when pulling or deploying container images. Setting the context to `default` aligns the Docker CLI with the expected Docker endpoint, ensuring Distr can interact with the Docker daemon properly.
 </Aside>
 
-If Docker is set to the desktop-linux context, you might encounter errors in the container logs like:
+If Docker is set to the `desktop-linux` context, you might encounter errors in the container logs like:
 
 ```
 unable to get image 'postgres:17.3-alpine3.20': Cannot connect to the Docker daemon at unix:///Users/jakepage/.docker/run/docker.sock. Is the docker daemon running?
 ```
 
-## 3. Set the Docker Context to default
+## 3. Set the Docker Context to the `default` context
 
-To switch the Docker context to default, run:
+To switch the Docker context to `default`, run:
 
 ```
 docker context use default
@@ -65,27 +65,66 @@ default *       Current DOCKER_HOST based configuration   unix:///var/run/docker
 desktop-linux   Docker Desktop                            unix:///Users/jakepage/.docker/run/docker.sock
 ```
 
-## 4. Update the Docker Config File
+This should be all that's needed, now [test](/docs/guides/distr-on-macos/#5-test-the-setup) your setup by creating a deployment on Distr.
 
-Check your `~/.docker/config.json` file and ensure "credsStore" is replaced with "credStore":
+## 4. Optional: Update the Docker Config File
 
-**Before:**
+### When should yoo do this?
+If, during installation, you encounter the following error message:
+
+```
+docker.credentials.errors.InitializationError: docker-credential-desktop not installed or not available in PATH
+```
+
+This error indicates that Docker is configured to use a credential store called "desktop," but the corresponding executable `docker-credential-desktop` is either not installed or not accessible through the system's PATH.
+
+### Why this happens
+
+<Aside tag="info">
+When Docker is configured to use a credential store, it tries to invoke an external binary (docker-credential-NAME). On macOS, `docker-credential-osxkeychain` is generally preferred because it integrates well with the macOS Keychain. Using `docker-credential-desktop` can lead to path issues, especially if the Docker Desktop installation did not properly add this helper to the system's PATH.
+</Aside>
+
+### How to fix it
+1. Check your `~/.docker/config.json` and verify which `credsStore` is being used? 
 
 ```
 {
     "auths": {},
-    "credsStore": "osxkeychain"
+    "credStore" : "desktop"
 }
 ```
 
-**After:** 
+### Use docker-credential-osxkeychain instead.
 
+Since you're on a Mac, you could use `docker-credential-osxkeychain` instead of `docker-credential-desktop`.
+
+1. Install `docker-credential-helper`
+
+```
+brew install docker-credential-helper
+```
+
+2. Verify `docker-credential-osxkeychain` is available.
+```
+$ docker-credential-osxkeychain version
+docker-credential-osxkeychain (github.com/docker/docker-credential-helpers) v0.8.2
+```
+
+3. Set `credsStore` to `osxkeychain` in `~/.docker/config.json`
 ```
 {
     "auths": {},
-    "credStore": "osxkeychain"
+    "credStore" : "osxkeychain"
 }
 ```
+
+4. Login to Docker Hub
+```
+$ docker login -u $USER
+Password: 
+Login Succeeded
+```
+
 ## 5. Test the Setup
 
 To verify everything is configured correctly, try [deploying an application](/docs/guides/onboarding-a-docker-app/#creating-a-new-deployment) through Distr. If there are no errors related to Docker socket access, your setup is good to go.
