chore: small additional links and changes
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/use-cases/air-gapped.mdx
+++ b/src/content/docs/docs/use-cases/air-gapped.mdx
@@ -21,7 +21,7 @@ import {Aside} from '@astrojs/starlight/components';
 
 ## How does Distr tackle these challenges?
 
-<Aside type="note" title="Info">
+<Aside type="note">
   Are you serving Air-gapped customer? If so [get in
   touch](https://cal.glasskube.com/team/gk/demo?duration=30) and we can walk you
   through the Air gapped specific features.
