--- a/src/content/docs/docs/getting-started/deployment-methods.mdx
+++ b/src/content/docs/docs/getting-started/deployment-methods.mdx
@@ -22,7 +22,7 @@ Features:
 - Advanced **credentials encryptio**n for enhanced security.
 - **No platform management responsibilities**.
 
-<Aside type="note" title="Info">
+<Aside type="note">
   Get started by creating your Distr account [here](https://signup.distr.sh) and
   then following the onboarding steps here.
 </Aside>
@@ -35,7 +35,7 @@ Features:
 - **Full responsibility for platform availability and maintenance**.
 - Ideal for users who **prefer to manage their environment** independently.
 
-<Aside type="note" title="Info">
+<Aside type="note">
   To get started with the self-hosted option, follow our
   [guide](/docs/self-hosting/getting-started/) to deploy Distr in your
   environment.
