--- a/src/content/docs/docs/getting-started/how-it-works.mdx
+++ b/src/content/docs/docs/getting-started/how-it-works.mdx
@@ -18,7 +18,7 @@ The platform consists of two key components:
 
 This architecture ensures that communication and updates between the ISV and their end customers is as close to real time as possible, facilitating efficient application lifecycle management.
 
-<Aside type="note" title="Info">
+<Aside type="note">
   Ready to get started? Create your Distr account
   [here](https://glasskube.cloud/signup.html) and then following the onboarding
   steps here
@@ -50,7 +50,7 @@ The [Distr API](/docs/integrations/api/), allows users to bypass the GUI for dir
 
 The [Distr SDK](/docs/integrations/sdk/) enables users and developers to embed Distr’s application management features directly into their own applications or to even write new applications that leverage the SDK. While SDK development runs in parallel with Distr development, there may be occasional gaps in feature parity due to development speed and the impracticality of implementing certain platform-specific features in the SDK. Nevertheless, the SDK provides a powerful way to integrate Distr functionality into your workflows, and we encourage you to explore its capabilities.
 
-<Aside type="note" title="Info">
+<Aside type="note">
   For more in-depth information on both the Distr API and SDK, head over to the
   Developer Tools section of the docs.
 </Aside>
