--- a/src/content/docs/docs/getting-started/quickstart.mdx
+++ b/src/content/docs/docs/getting-started/quickstart.mdx
@@ -5,7 +5,6 @@ sidebar:
   order: 3
 ---
 
-
 import {Aside} from '@astrojs/starlight/components';
 
 ## Prerequisites
@@ -101,8 +100,10 @@ Once the agent is installed, it will pull the deployment specifications and inst
 ![run-agent](../../../../assets/docs/getting-started/quickstart/connection-command.png)
 
 Run the Distr agent in the target environment:
+
 <Aside type="tip">
-  If you are running the agent on macOS, make sure to checkout the [macOS setup guide](/docs/guides/distr-on-macos/) for additional steps.
+  If you are running the agent on macOS, make sure to checkout the [macOS setup
+  guide](/docs/guides/distr-on-macos/) for additional steps.
 </Aside>
 
 ![run-agent](../../../../assets/docs/getting-started/quickstart/run-command.png)
@@ -123,6 +124,7 @@ Here's what you'll find:
 
 1. The Distr agent was installed first.
 2. The agent then deployed two additional containers:
+
 - The Shiori app
 - The Shiori app's database container
 
