--- a/src/content/docs/docs/guides/license-mgmt.mdx
+++ b/src/content/docs/docs/guides/license-mgmt.mdx
@@ -10,19 +10,25 @@ import {Aside, Code, TabItem, Tabs} from '@astrojs/starlight/components';
 In this guide, we'll walk you through how to use the license management feature to control which application versions your end-customers can access.
 
 <Aside type="tip">
-The license management feature is currently in Beta. To request access, reach out to us on [Discord](https://discord.gg/6qqBSAWZfW).
+  The license management feature is currently in Beta. To request access, reach
+  out to us on [Discord](https://discord.gg/6qqBSAWZfW).
 </Aside>
 
 With the licensing feature, you can link a license to a customer, allowing access to specific application versions, whether it’s one, a select few, or all available versions. You can name the license, set an expiration date, and assign it to a particular customer, giving you granular control over which applications and versions each end-customer can use.
 
 ## License flow diagram
+
 ![license-diagram](../../../../assets/docs/guides/license-diagram.png)
 
 <Aside type="note">
-The diagram above illustrates how a license links an end-customer account to a specific set of application versions. Once the license is active, the customer will only be able to see and can only deploy the granted versions of the application.
+  The diagram above illustrates how a license links an end-customer account to a
+  specific set of application versions. Once the license is active, the customer
+  will only be able to see and can only deploy the granted versions of the
+  application.
 </Aside>
 
 ## Use case
+
 Many vendors offer tiered pricing plans with different features and functionality. For those serving on-prem environments, granular control over version access is crucial, whether it’s delivering a specific feature set, pointed hotfixes to select customers or offering early access to new application versions. This level of precision is exactly what our first beta release of the licensing feature aims to deliver.
 
 ## License features
@@ -51,6 +57,7 @@ The customer can now access and deploy the assigned application version/s direct
 ![license-form](../../../../assets/docs/guides/license-form.png)
 
 ## OCI registry authentication:
+
 If your images are stored in a private OCI registry, you'll need to provide access credentials. You can configure these credentials in the lower section of the license configuration panel. Once set, the application versions will be available at the deployment target for as long as the license is valid.
 
 ![OCI-registry-auth](../../../../assets/docs/guides/OCI-Registry-auth.png)
