docs: updated internal links and added to quikstart guide and faqs

--- a/src/content/docs/docs/getting-started/quickstart.mdx
+++ b/src/content/docs/docs/getting-started/quickstart.mdx
@@ -165,3 +165,9 @@ Head over to the `Deployments` tab and click on the `+ Add deployment` button an
 
 - For more information on how to deploy a Docker compose packaged application, check out this [guide](/docs/guides/onboarding-a-docker-app/).
 - For more information on how to deploy a Helm chart packaged application, check out this [guide](/docs/guides/onboarding-a-helm-app/).
+
+### Create your first software license
+
+Easily manage customer access by associating specific applications and application versions with a license. Give the license a name, set an expiration date, and gain granular control over what each customer can access.
+
+For full details, check out the [License Management guide](/docs/guides/license-mgmt/).
