--- a/src/content/docs/docs/use-cases/byoc.mdx
+++ b/src/content/docs/docs/use-cases/byoc.mdx
@@ -9,6 +9,6 @@ sidebar:
 
 This model is well-suited for end customers who may lack extensive infrastructure expertise but still require third-party software to be deployed within their own data centers or cloud environments. These customers might have a small or non-existent technical team and are often comfortable granting the ISV access to a dedicated cloud account or direct access to devices within their infrastructure for management purposes.
 
-The key distinction between [BYOC and on-prem deployments](https://glasskube.dev/blog/replicated-vs-apollo-vs-octopus-deploy-vs-glasskube-cloud/#the-key-differentiator-push-vs-pull-deployments) is the approach to software updates. In BYOC scenarios, updates can be both pulled by the end customer and pushed directly by the ISV. This added flexibility simplifies update management for customers who may prefer or require additional support.
+The key distinction between [BYOC and on-prem deployments](https://glasskube.dev/blog/replicated-vs-apollo-vs-octopus-deploy-vs-glasskube-cloud/#the-key-differentiator-push-vs-pull-deployments) is the approach to software updates. In BYOC scenarios, updates can be both **pulled** by the end customer **and pushed** directly by the ISV. This added flexibility simplifies update management for customers who may prefer or require additional support.
 
 When onboarding a customer, ISVs can determine whether BYOC support is needed. If so, the platform will enable upgrade-pushing capabilities, allowing ISVs to manage updates proactively. Additionally, BYOC deployments provide ISVs with the ability to customize configurations, such as Helm values, which are typically reserved for end customers in the on-prem deployment model. This customization capability allows ISVs to tailor deployments to meet specific customer requirements.
