--- a/src/content/docs/docs/use-cases/on-prem.mdx
+++ b/src/content/docs/docs/use-cases/on-prem.mdx
@@ -47,7 +47,7 @@ By default, uptime metrics and [logs](/docs/product/customer-portal/#2-access-to
 
 ### License management
 
-An upcoming feature will give ISVs extensive flexibility over license management. ISVs will have granular control over feature availability, contract terms, and extensions, making it easier to customize and manage customer agreements. Distr is committed to making this process intuitive and efficient.
+With the [License management feature](/docs/guides/license-mgmt/), ISV's have granular control over software version access, private registry access, contract terms, and extensions, making it easier to customize and manage customer agreements.
 
 ### Onboarding
 
