docs: correct an uppercase M

--- a/src/content/docs/docs/guides/distr-on-macos.mdx
+++ b/src/content/docs/docs/guides/distr-on-macos.mdx
@@ -18,7 +18,7 @@ When we talk about "running Distr," we're specifically referring to running the 
 ## Prerequisites
 Before you begin, make sure you have:
 
-- A MacOS system with admin access
+- A macOS system with admin access
 - [Docker Desktop](https://www.docker.com/products/docker-desktop/) installed
 - Access to the [Distr platform](https://app.distr.sh/)
 
