--- a/src/content/docs/docs/product/faqs.mdx
+++ b/src/content/docs/docs/product/faqs.mdx
@@ -49,21 +49,29 @@ sidebar:
 </details>
 
 <details>
-  <summary>Can I restrict end-user access to software if a contract expires?</summary>
+  <summary>
+    Can I restrict end-user access to software if a contract expires?
+  </summary>
   <p>
     {' '}
-    Yes, through the [License management feature](/docs/guides/license-mgmt/), ISVs can set expiration dates for each license.
-    Once an expiration date expires, the end customer will no longer have access to the software versions
-    previously granted by the license.{' '}
+    Yes, through the [License management feature](/docs/guides/license-mgmt/),
+    ISVs can set expiration dates for each license. Once an expiration date
+    expires, the end customer will no longer have access to the software
+    versions previously granted by the license.{' '}
   </p>
 </details>
 
 <details>
-  <summary>Can I simulate a target environment on a MacOS machine for testing purposes?</summary>
+  <summary>
+    Can I simulate a target environment on a MacOS machine for testing purposes?
+  </summary>
   <p>
     {' '}
-    Yes, definitely. If you want to simulate a target environment by running a container hosting emulator like [Docker Desktop](https://www.docker.com/products/docker-desktop/) 
-    on your macOS machine, check out this [short guide](/docs/guides/distr-on-macos/). It covers the configuration steps needed to ensure Distr can communicate 
-    with the Docker daemon.{' '}
+    Yes, definitely. If you want to simulate a target environment by running a
+    container hosting emulator like [Docker
+    Desktop](https://www.docker.com/products/docker-desktop/) on your macOS
+    machine, check out this [short guide](/docs/guides/distr-on-macos/). It
+    covers the configuration steps needed to ensure Distr can communicate with
+    the Docker daemon.{' '}
   </p>
 </details>
